# petitmates-demo

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  entitlements.plist
.github/workflows/: build-windows.yml
assets/bearded_dragon/: manifest.toml
src/: macos.rs  main.rs  manifest.rs  windows.rs
